--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stitch-schematics",
+  "name": "@linkurious/schematics",
   "version": "0.0.0",
-  "description": "A blank schematics",
+  "description": "Linkurious schematics",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
@@ -13,16 +13,14 @@
   "author": "",
   "license": "MIT",
   "schematics": "./src/collection.json",
-  "dependencies": {
-    "@angular-devkit/core": "^12.2.4",
-    "@angular-devkit/schematics": "^12.2.4",
-    "typescript": "~4.3.2"
-  },
   "devDependencies": {
-    "@schematics/angular": "^12.2.5",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine": "^3.5.0",
-    "rxjs": "^7.3.0"
-  }
+    "@schematics/angular": "12.2.5",
+    "@types/jasmine": "3.8.0",
+    "@types/node": "12.11.1",
+    "jasmine": "3.5.0",
+    "@angular-devkit/core": "12.2.4",
+    "@angular-devkit/schematics": "12.2.4",
+    "typescript": "4.3.2"
+  },
+  "dependencies": {}
 }
