--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "description": "Linkurious schematics",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "prepare": "tsc -b",
+    "build": "tsc -b -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
+    "test:unit": "jasmine src/**/*_spec.js",
     "test": "npm run build && jasmine src/**/*_spec.js"
   },
   "keywords": [
