test(unit-tests): Use mocha rather than Jasmine

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -b tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
     "test:unit": "jasmine src/**/*_spec.js",
-    "test": "npm run build && istanbul cover --include-all-sources jasmine src/**/*_spec.js --code-coverage",
+    "test": "./node_modules/.bin/mocha -r ts-node/register/transpile-only src/**/*_spec.ts",
     "lint": "eslint --fix --ext .ts .",
     "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml --ext .ts ."
   },
@@ -31,21 +31,27 @@
     "@angular-devkit/core": "12.2.4",
     "@angular-devkit/schematics": "12.2.4",
     "@schematics/angular": "12.2.5",
-    "@types/jasmine": "3.8.0",
+    "@types/chai": "4.2.17",
+    "@types/mocha": "8.2.2",
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "@typescript-eslint/typescript-estree": "4.31.1",
+    "chai": "4.3.4",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "3.1.4",
     "husky": "1.2.0",
-    "istanbul": "0.4.5",
-    "jasmine": "3.5.0",
     "lint-staged": "10.5.1",
+    "mocha": "8.3.2",
+    "mocha-junit-reporter": "2.0.0",
+    "mocha-multi-reporters": "1.5.1",
+    "nyc": "15.1.0",
     "prettier": "2.1.2",
-    "typescript": "4.3.2"
+    "should": "11.1.0",
+    "typescript": "4.3.2",
+    "ts-node": "6.2.0"
   },
   "dependencies": {}
 }
