--- a/package.json
+++ b/package.json
@@ -1,26 +1,65 @@
 {
   "name": "@linkurious/schematics",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Linkurious schematics",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "prepare": "tsc -b",
+    "build": "tsc -b tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
-    "test": "npm run build && jasmine src/**/*_spec.js"
+    "test:unit": "nyc --reporter=text-summary --reporter=cobertura --report-dir=reports  mocha -r ts-node/register/transpile-only --reporter mocha-multi-reporters --reporter-options configFile=.test-reporters.json src/**/*_spec.ts",
+    "test": "./node_modules/.bin/mocha -r ts-node/register/transpile-only src/**/*_spec.ts",
+    "lint": "eslint --fix --ext .ts .",
+    "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml --ext .ts ."
   },
   "keywords": [
     "schematics"
+  ],
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "[ -n \"$BUILD_ID\" ] && exit 0 || lint-staged"
+    }
+  },
+  "files": [
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "src/**/*.less",
+    "src/**/*.html",
+    "src/**/*.json"
   ],
   "author": "",
   "license": "MIT",
   "schematics": "./src/collection.json",
   "devDependencies": {
-    "@schematics/angular": "12.2.5",
-    "@types/jasmine": "3.8.0",
-    "@types/node": "12.11.1",
-    "jasmine": "3.5.0",
     "@angular-devkit/core": "12.2.4",
     "@angular-devkit/schematics": "12.2.4",
-    "typescript": "4.3.2"
+    "@schematics/angular": "12.2.5",
+    "@types/chai": "4.2.17",
+    "@types/mocha": "8.2.2",
+    "@types/node": "12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/typescript-estree": "4.31.1",
+    "chai": "4.3.4",
+    "eslint": "7.6.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "husky": "1.2.0",
+    "lint-staged": "10.5.1",
+    "mocha": "8.3.2",
+    "mocha-junit-reporter": "2.0.0",
+    "mocha-multi-reporters": "1.5.1",
+    "nyc": "15.1.0",
+    "prettier": "2.1.2",
+    "should": "11.1.0",
+    "typescript": "4.3.2",
+    "ts-node": "6.2.0"
   },
   "dependencies": {}
 }
